crates/deps/sys/src/Windows/Win32/Security/WinWlx/mod.rs

#![allow(non_snake_case, non_camel_case_types)]
#[link(name = "windows")]
extern "system" {
    fn PFNMSGECALLBACK();
    fn PWLX_ASSIGN_SHELL_PROTECTION();
    fn PWLX_CHANGE_PASSWORD_NOTIFY();
    fn PWLX_CHANGE_PASSWORD_NOTIFY_EX();
    fn PWLX_CLOSE_USER_DESKTOP();
    fn PWLX_CREATE_USER_DESKTOP();
    fn PWLX_DIALOG_BOX();
    fn PWLX_DIALOG_BOX_INDIRECT();
    fn PWLX_DIALOG_BOX_INDIRECT_PARAM();
    fn PWLX_DIALOG_BOX_PARAM();
    fn PWLX_DISCONNECT();
    fn PWLX_GET_OPTION();
    fn PWLX_GET_SOURCE_DESKTOP();
    fn PWLX_MESSAGE_BOX();
    fn PWLX_QUERY_CLIENT_CREDENTIALS();
    fn PWLX_QUERY_CONSOLESWITCH_CREDENTIALS();
    fn PWLX_QUERY_IC_CREDENTIALS();
    fn PWLX_QUERY_TERMINAL_SERVICES_DATA();
    fn PWLX_QUERY_TS_LOGON_CREDENTIALS();
    fn PWLX_SAS_NOTIFY();
    fn PWLX_SET_CONTEXT_POINTER();
    fn PWLX_SET_OPTION();
    fn PWLX_SET_RETURN_DESKTOP();
    fn PWLX_SET_TIMEOUT();
    fn PWLX_SWITCH_DESKTOP_TO_USER();
    fn PWLX_SWITCH_DESKTOP_TO_WINLOGON();
    fn PWLX_USE_CTRL_ALT_DEL();
    fn PWLX_WIN31_MIGRATE();
    fn STATUSMSG_OPTION_NOANIMATION();
    fn STATUSMSG_OPTION_SETFOREGROUND();
    fn WLX_CLIENT_CREDENTIALS_INFO_V1_0();
    fn WLX_CLIENT_CREDENTIALS_INFO_V2_0();
    fn WLX_CONSOLESWITCHCREDENTIAL_TYPE_V1_0();
    fn WLX_CONSOLESWITCH_CREDENTIALS_INFO_V1_0();
    fn WLX_CREATE_INSTANCE_ONLY();
    fn WLX_CREATE_USER();
    fn WLX_CREDENTIAL_TYPE_V1_0();
    fn WLX_CREDENTIAL_TYPE_V2_0();
    fn WLX_CURRENT_VERSION();
    fn WLX_DESKTOP();
    fn WLX_DESKTOP_HANDLE();
    fn WLX_DESKTOP_NAME();
    fn WLX_DIRECTORY_LENGTH();
    fn WLX_DISPATCH_VERSION_1_0();
    fn WLX_DISPATCH_VERSION_1_1();
    fn WLX_DISPATCH_VERSION_1_2();
    fn WLX_DISPATCH_VERSION_1_3();
    fn WLX_DISPATCH_VERSION_1_4();
    fn WLX_DLG_INPUT_TIMEOUT();
    fn WLX_DLG_SAS();
    fn WLX_DLG_SCREEN_SAVER_TIMEOUT();
    fn WLX_DLG_USER_LOGOFF();
    fn WLX_LOGON_OPT_NO_PROFILE();
    fn WLX_MPR_NOTIFY_INFO();
    fn WLX_NOTIFICATION_INFO();
    fn WLX_OPTION_CONTEXT_POINTER();
    fn WLX_OPTION_DISPATCH_TABLE_SIZE();
    fn WLX_OPTION_FORCE_LOGOFF_TIME();
    fn WLX_OPTION_IGNORE_AUTO_LOGON();
    fn WLX_OPTION_NO_SWITCH_ON_SAS();
    fn WLX_OPTION_SMART_CARD_INFO();
    fn WLX_OPTION_SMART_CARD_PRESENT();
    fn WLX_OPTION_USE_CTRL_ALT_DEL();
    fn WLX_OPTION_USE_SMART_CARD();
    fn WLX_PROFILE_TYPE_V1_0();
    fn WLX_PROFILE_TYPE_V2_0();
    fn WLX_PROFILE_V1_0();
    fn WLX_PROFILE_V2_0();
    fn WLX_SAS_ACTION_DELAYED_FORCE_LOGOFF();
    fn WLX_SAS_ACTION_FORCE_LOGOFF();
    fn WLX_SAS_ACTION_LOCK_WKSTA();
    fn WLX_SAS_ACTION_LOGOFF();
    fn WLX_SAS_ACTION_LOGON();
    fn WLX_SAS_ACTION_NONE();
    fn WLX_SAS_ACTION_PWD_CHANGED();
    fn WLX_SAS_ACTION_RECONNECTED();
    fn WLX_SAS_ACTION_SHUTDOWN_HIBERNATE();
    fn WLX_SAS_ACTION_SHUTDOWN_SLEEP();
    fn WLX_SAS_ACTION_SHUTDOWN_SLEEP2();
    fn WLX_SAS_ACTION_SWITCH_CONSOLE();
    fn WLX_SAS_ACTION_TASKLIST();
    fn WLX_SAS_ACTION_UNLOCK_WKSTA();
    fn WLX_SAS_TYPE_AUTHENTICATED();
    fn WLX_SAS_TYPE_CTRL_ALT_DEL();
    fn WLX_SAS_TYPE_MAX_MSFT_VALUE();
    fn WLX_SAS_TYPE_SCRNSVR_ACTIVITY();
    fn WLX_SAS_TYPE_SCRNSVR_TIMEOUT();
    fn WLX_SAS_TYPE_SC_FIRST_READER_ARRIVED();
    fn WLX_SAS_TYPE_SC_INSERT();
    fn WLX_SAS_TYPE_SC_LAST_READER_REMOVED();
    fn WLX_SAS_TYPE_SC_REMOVE();
    fn WLX_SAS_TYPE_SWITCHUSER();
    fn WLX_SAS_TYPE_TIMEOUT();
    fn WLX_SAS_TYPE_USER_LOGOFF();
    fn WLX_SC_NOTIFICATION_INFO();
    fn WLX_SHUTDOWN_TYPE();
    fn WLX_TERMINAL_SERVICES_DATA();
    fn WLX_VERSION_1_0();
    fn WLX_VERSION_1_1();
    fn WLX_VERSION_1_2();
    fn WLX_VERSION_1_3();
    fn WLX_VERSION_1_4();
    fn WLX_WM_SAS();
}
